# protohoggr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
benches/: varint.rs
src/: lib.rs
tests/: wire.rs
