[package]
name = "protohoggr"
version = "0.2.2"
description = "Zero-copy protobuf wire-format primitives: varint, zigzag, cursor-based decoder, field encoders, packed repeated fields."
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
authors = ["folknor <folk@folk.wtf>"]
readme = "README.md"
repository = "https://github.com/folknor/protohoggr"
keywords = ["protobuf", "varint", "wire-format", "encoding", "decoding"]
categories = ["encoding", "parser-implementations"]

[lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
varint-simd = "0.4"

[[bench]]
name = "varint"
harness = false
